# LittleVulkanSampler

./: .gitignore  CMakeLists.txt  CMakePresets.json  FirstVulkanEngine.cpp  FirstVulkanEngine.h  vcpkg.json
platform/: Clock.cpp  Clock.h  CmakeLists.txt  Window.cpp  Window.h
renderengine/: CMakeLists.txt  RenderEngine.cpp  RenderEngine.h
samples/: CMakeLists.txt
samples/SpinningCube/: CMakeLists.txt  SpinningCube.cpp
samples/SpinningCube/shaders/: spinning_cube.frag  spinning_cube.vert
vulkanbackend/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanFrameManager.cpp  VulkanFrameManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapchain.cpp  VulkanSwapchain.h
